Added image and headline to index.html.  Centered with home.css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-US">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Homepage</title>
+  <link rel="stylesheet" href="home.css" type="text/css">
+</head>
 <body>
-  <p class="description">This is a collection of my github projects.
-  I have some knowledge of web development, but I am mostly interested in Machine Learning</p>
+  <h1 class="headline">Alex Barbara is a big nerd.</h1>
+  <h2 class="sub">This is now official.  It is on the internet.</h2>
+  <img class="evidence" href="Capture.jpg">
 </body>
 </html>
