Fixed img src, centered sub headline, and made backgroud blue.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <h1 class="headline">Alex Barbara is a big nerd.</h1>
   <h2 class="sub">This is now official.  It is on the internet.</h2>
-  <img class="evidence" href="Capture.jpg">
+  <img src="Capture.jpg" id="evidence">
 </body>
 </html>
