--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homepage</title>
-  <link rel="stylesheet" href="home.css" type="text/css">
+  <link rel="stylesheet" href="../home.css" type="text/css">
 </head>
 <body>
   <h1 class="headline">Alex Barbara is a big nerd.</h1>
-  <h2 class="sub">This is now official.  It is on the internet.</h2>
-  <img src="Capture.jpg" id="evidence">
+  <h3 class="sub">This is now official.  It is on the internet.</h3>
+  <img src="../Capture.jpg" id="evidence">
 </body>
 </html>
