--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <h1 class="headline">Alex Barbara is a big nerd.</h1>
   <h3 class="sub">This is now official.  It is on the internet.</h3>
-  <img src="../Capture.jpg" id="evidence">
+  <img src="../Capture.JPG" id="evidence">
 </body>
 </html>
