added button and js file to change background color

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homepage</title>
   <link rel="stylesheet" href="home.css" type="text/css">
+  <script src="home.js"></script>
 </head>
 <body>
+  <button onclick="change_color()"
+  type="button"
+  id="color_button"
+  title="switch color button">Switch Background Color</button>
   <img class="deer_background"
   src='Images/deer_background.svg'/>
 </body>
