made button change background to random color

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <script src="home.js"></script>
 </head>
 <body>
+  <img class="deer_background"
+  src='Images/deer_background.svg'/>
   <button onclick="change_color()"
   type="button"
   id="color_button"
-  title="switch color button">Switch Background Color</button>
-  <img class="deer_background"
-  src='Images/deer_background.svg'/>
+  title="switch color button">Random Background Color</button>
 </body>
 </html>
