removed button title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   src='Images/deer_background.svg'/>
   <button onclick="change_color()"
   type="button"
-  id="color_button"
-  title="switch color button">Random Background Color</button>
+  id="color_button">Random Background Color</button>
 </body>
 </html>
