Added logos button - no funtionality yet though

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <button class="openbtn"
       id="colorsbtn"
       onclick="opencloseColors()">Colors</button>
+      <button class="openbtn"
+      id="logosbtn"
+      onclick="opencloseLogos()">Logos</button>
     </div>
     <img id="deer_background"
     src='Images/deer_background.svg'/>
