--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <script src="home.js"></script>
 </head>
 <body>
-  <div class="sidebar" id="tunes">
+  <div id="Ethan">
+    <img loc="Images/ethan.png">
+  </div>
+  <!-- <div class="sidebar" id="tunes">
     <iframe
     src="https://open.spotify.com/embed/playlist/0Ablnkl0wmvcRJxaHz9xnH?si=XPQQo8OLRAy2B0tAIRB0Aw"
     frameborder="0" allowtransparency="true"
@@ -17,7 +20,7 @@
     <!-- <button onclick="change_color()"
     type="button"
     id="color_button">Random Background Color</button> -->
-  </div>
+  <!-- </div>
   <div id="main">
     <div id="sidebuttons">
       <button class="openbtn"
@@ -32,6 +35,6 @@
     </div>
     <img id="deer_background"
     src='Images/deer_background.svg'/>
-  </div>
+  </div> -->
 </body>
 </html>
