--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewport"
   content="width=device-width, initial-scale=1.0">
-  <title>Dreaming Fresh</title>
+  <title>People Who Are Dumb</title>
   <link rel="stylesheet" href="home.css" type="text/css">
   <script src="home.js"></script>
 </head>
 <body>
   <div id="Ethan">
-    <img loc="Images/ethan.png">
+    <img src="Images/ethan.png" class="center">
   </div>
   <!-- <div class="sidebar" id="tunes">
     <iframe
