added name and centered

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   <div id="Ethan">
-    <img src="Images/ethan.png" class="center">
+    <h1 class="text_center">Ethan Smith</h1>
+    <img src="Images/ethan.png" class="image_center">
   </div>
   <!-- <div class="sidebar" id="tunes">
     <iframe
